--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,15 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: #C0C0C0;
+
+    
   
 }
-
+.body {
+  background: #2a509b;
+    background: linear-gradient(90deg, rgba(42, 80, 155, 1) 0%, rgba(173, 212, 165, 1) 50%, rgba(227, 225, 200, 1) 100%);
+}
 
 
 .contact_form {
