--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #C0C0C0;
 }
 
 a {
@@ -28,6 +29,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background: #2a509b;
+    background: linear-gradient(90deg, rgba(42, 80, 155, 1) 0%, rgba(173, 212, 165, 1) 50%, rgba(227, 225, 200, 1) 100%);
 }
 
 h1 {
@@ -58,6 +61,8 @@ button:focus-visible {
   :root {
     color: #213547;
     background-color: #ffffff;
+    background: #2a509b;
+      background: linear-gradient(90deg, rgba(42, 80, 155, 1) 0%, rgba(173, 212, 165, 1) 50%, rgba(227, 225, 200, 1) 100%);
   }
   a:hover {
     color: #747bff;
